-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0
-
-
90822833f (dev), 3b3b6f1ad (6.6)
This seems to only happen on Windows. Try running attached example, it crashes to stack overflow.
Same worked fine in Qt 6.5.
- resulted from
-
QTBUG-104688 State variable in QCheckBox::stateChanged should be emitted as Qt::CheckState instead of int
-
- Closed
-
For Gerrit Dashboard: QTBUG-118716 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
516249,3 | QCheckBox: Don't emit checkStateChanged when nothing changed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
516724,3 | QCheckBox: Don't emit checkStateChanged when nothing changed | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |