QCheckBox: Don't emit checkStateChanged when nothing changed

QCheckBox::checkStateChanged() was emitted with msvc even though the
check state was not changed due to a faulty comparison.
Amends: 37b47ebf946ef1a37573107375fbe5fc0eb1e6d2

Fixes: QTBUG-118716
Task-number: QTBUG-104688
Change-Id: Iafeabeb9214f6c7510ea4ed87fabb7dc0ba175a6
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
(cherry picked from commit 90822833f373d9aa9e2ee9b60f93b869e718cfe0)
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>